--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
       - 'v*'
 
 env:
-  NV_CUDA_VERSION: 12.0.1-cudnn8-runtime-ubuntu22.04
+  SCIPY_VERSION: latest
   DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_USERNAME }}/pytorch
 
 jobs:
@@ -49,8 +49,7 @@ jobs:
             ${{ env.DOCKER_HUB_REPO }}
             ghcr.io/${{ github.repository }}
           tags: |
-            type=ref,event=branch
-            type=raw,value=${{ env.NV_CUDA_VERSION }}
+            type=raw,value=${{ env.SCIPY_VERSION }}
       -
         name: Build & Push Docker image
         uses: docker/build-push-action@v3
@@ -62,7 +61,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VERSION=${{ env.NV_CUDA_VERSION }}
+            VERSION=${{ env.SCIPY_VERSION }}
       -
         name: Update Docker Hub Repository Description
         uses: peter-evans/dockerhub-description@v2
