--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,7 +55,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64
+          platforms: x86_64
           file: images/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
